[tool.poetry]
name = "hip_data_tools"
version = "1.0"
readme = "README.md"
description = "Common Python tools and utilities for data engineering."
authors = ["Hipages Data Team <datascience@hipagesgroup.com.au>"]
license = "OSL"

[tool.poetry.dependencies]
python = ">=3.8,<4"
Cython = "^0.29.28"
lxml = "^4.7.1"
cassandra-driver = "^3.25.0"
pandas = "^1.4.2"
retrying = "^1.3.3"
confluent-kafka = "^1.8.2"
boto3 = "^1.22.8"
botocore = "^1.25.8"
joblib = "^1.1.0"
arrow = "^1.2.2"
oauth2client = "^4.1.3"
googleads = "^37.0.0"
gspread = "^5.3.2"
GitPython = "^3.1.27"
stringcase = "^1.2.0"
mysqlclient = "^2.1.0"
pyarrow = ">=6.0.1,<9.0.0"
fastparquet = "^0.8.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
Sphinx = "^4.5.0"
freezegun = "^1.2.1"
moto = "^3.1.7"
mock = "^4.0.3"
testcontainers = "^3.5.3"
mocker = "^1.1.1"
pytest-mock = "^3.7.0"
pytest-stub = "^1.1.0"
# speed up build in dev: due to collision which causes a reinstall,
# we will not use 21.3 but 20.9 in dev in order to avoid reinstall
packaging = "^20.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
packages = [
    { include = "hip_data_tools" }
]
