[tool.poetry]
name = "hip_data_tools"
version = "1.0"
readme = "README.md"
description = "Common Python tools and utilities for data engineering."
authors = ["Hipages Data Team <datascience@hipagesgroup.com.au>"]
license = "OSL"

[tool.poetry.dependencies]
python = ">=3.8,<4"
Cython = "^0.29.34"
lxml = "^4.9.2"
cassandra-driver = "^3.26.0"
pandas = "^2.0.0"
retrying = "^1.3.4"
confluent-kafka = "^2.0.2"
boto3 = "^1.26.107"
botocore = "^1.29.107"
joblib = "^1.2.0"
arrow = "^1.2.3"
oauth2client = "^4.1.3"
googleads = "^37.0.0"
gspread = "^5.8.0"
GitPython = "^3.1.31"
stringcase = "^1.2.0"
mysqlclient = "^2.1.1"
pyarrow = "^11.0.0"
fastparquet = "^2023.2.0"

[tool.poetry.dev-dependencies]
freezegun = "^1.2.1"
moto = "^3.1.7"
mock = "^4.0.3"
testcontainers = "^3.5.3"
mocker = "^1.1.1"
pytest-mock = "^3.7.0"
pytest-stub = "^1.1.0"
# speed up build in dev: due to collision which causes a reinstall,
# we will not use 21.3 but 20.9 in dev in order to avoid reinstall
packaging = ">20.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
sphinx = "^6.1.3"
freezegun = "^1.2.2"
moto = "^4.1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
packages = [
    { include = "hip_data_tools" }
]
