[metadata]
name = hip_data_tools
description = Common utility functions for data engineering usecases
description_file = README.md
author = hipages Data Science Team
author_email = datascience@hipagesgroup.com.au
license = osl-3.0
license_file = LICENSE.md
url = https://github.com/hipagesgroup/data-tools
